[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Screenshake.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/GameTexures/Background.tex" type="Texture" id=4]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemydeathcounter.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/GameTexures/Pause.tex" type="Texture" id=7]
[ext_resource path="res://Scripts/Exit.gd" type="Script" id=8]
[ext_resource path="res://Pausing.gd" type="Script" id=9]
[ext_resource path="res://Sprites/GameTexures/levelpointer.tex" type="Texture" id=10]

[sub_resource type="Gradient" id=7]

offsets = PoolRealArray( 0, 0.374269, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.473684, 0.473684, 0.473684, 1, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 510, 10 )

[sub_resource type="GDScript" id=2]

script/source = "extends Timer

var max_time = 1

var min_time = 0.2

func _ready():
	set_wait_time(rand_range(min_time, max_time))"

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 408.243 )

[sub_resource type="Animation" id=4]

resource_name = "Beginning"
length = 0.98
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 0.9 ),
"transitions": PoolRealArray( 4, 0.25, 0.25, 1 ),
"update": 0,
"values": [ 0, 6, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:position")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -44.7763, 298.359 ), Vector2( 108.972, 299.867 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "Level_pointer"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 900, 300 ), Vector2( 915, 300 ), Vector2( 915, 300 ), Vector2( 900, 300 ) ]
}

[node name="Main" type="Node2D"]

position = Vector2( 2.51758, 0 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

position = Vector2( 509.595, 299.352 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
script = ExtResource( 2 )

[node name="Health" parent="." instance=ExtResource( 3 )]

rect_scale = Vector2( 1.5, 4.5 )
margin_left = 58.0
margin_top = 43.0
margin_right = 98.0
margin_bottom = 52.0

[node name="Sprite" type="Sprite" parent="."]

show_behind_parent = true
position = Vector2( 509.982, 300.653 )
scale = Vector2( 4.27083, 5 )
texture = ExtResource( 4 )
hframes = 7

[node name="Character" parent="." instance=ExtResource( 5 )]

position = Vector2( 108.972, 299.867 )

[node name="Particles2D" type="Particles2D" parent="Character"]

position = Vector2( -16.2391, -2.48901 )
config/amount = 1024
config/lifetime = 20.0
config/time_scale = 10.0
config/emitting = false
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 360.0
params/linear_velocity = 18.55
params/spin_velocity = 0.8
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = -1.86
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 20.0
params/final_size = 1.0
params/hue_variation = 1.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/orbit_velocity = 1.0
randomness/radial_accel = 1.0
color/color = Color( 0, 0, 0, 1 )
color/color_ramp = SubResource( 7 )

[node name="Bullet_death" type="StaticBody2D" parent="." groups=[
"Bullet_death",
]]

editor/display_folded = true
position = Vector2( -33.426, -21.636 )
input_pickable = false
collision_layer = 2
collision_mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Area2D" type="Area2D" parent="Bullet_death" groups=[
"Bullet_death",
]]

editor/display_folded = true
position = Vector2( 1095.12, 314.69 )
input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( -4.37114e-08, -1, 1, -4.37114e-08, -74.2128, 21.0302 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Wall6" type="CollisionShape2D" parent="Bullet_death/Area2D"]

position = Vector2( -74.2128, 21.0302 )
rotation_deg = -90.0
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Spaw_enemy" type="Position2D" parent="."]

position = Vector2( 258.009, 81.818 )

[node name="Spaw_enemy2" type="Position2D" parent="."]

position = Vector2( 913.128, 96.6229 )

[node name="Enemy_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = true
script = SubResource( 2 )

[node name="Enemy2_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false

[node name="EnemyBulletDeath" type="StaticBody2D" parent="." groups=[
"EBullet_death",
]]

editor/display_folded = true
position = Vector2( -99.9992, 5.55182 )
input_pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 88.5206, 279.539 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBulletDeath"]

position = Vector2( 88.5206, 279.539 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Beginning = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Beginning"

[node name="Walls" type="Node2D" parent="."]

editor/display_folded = true

[node name="wall" type="StaticBody2D" parent="Walls" groups=[
"Wall",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Wall1" type="StaticBody2D" parent="Walls" groups=[
"Wall",
]]

position = Vector2( 511.507, 49.9181 )
input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Wall1" type="CollisionShape2D" parent="Walls/Wall1" groups=[
"Wall",
]]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Wall2 2" type="StaticBody2D" parent="Walls" groups=[
"Wall",
"Bullet_death",
]]

position = Vector2( 502.629, 550.001 )
input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 3.58484, 1.0755 )
shapes/0/trigger = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Wall2" type="CollisionShape2D" parent="Walls/Wall2 2" groups=[
"Wall",
"Bullet_death",
]]

position = Vector2( 3.58484, 1.0755 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Wall3" type="StaticBody2D" parent="Walls" groups=[
"Wall",
]]

position = Vector2( 1030, 300 )
rotation_deg = -90.0
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Wall3 2" type="Area2D" parent="Walls/Wall3"]

position = Vector2( -0.647095, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Score" parent="." instance=ExtResource( 6 )]

margin_left = 447.0
margin_top = 61.0
margin_right = 613.0
margin_bottom = 127.0

[node name="Pause" type="Popup" parent="."]

visible = false
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0
popup_exclusive = true

[node name="Sprite" type="Sprite" parent="Pause"]

visibility/blend_mode = 2
position = Vector2( 595.941, 289.845 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
self_modulate = Color( 0.308594, 0.308594, 0.308594, 1 )

[node name="Button" type="Button" parent="Pause"]

pause_mode = 2
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 498.0
margin_top = 290.0
margin_right = 561.0
margin_bottom = 310.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Give Up"
flat = false
script = ExtResource( 8 )

[node name="Pauseandunpause" type="Node2D" parent="."]

pause_mode = 2
script = ExtResource( 9 )

[node name="Level_pointer" type="Sprite" parent="."]

visible = false
position = Vector2( 900, 300 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Level_pointer"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Level_pointer = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Slowmo" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="timeout"  from="Enemy_timer"  to="." method="_on_Enemy_timer_timeout" binds=[  ]]

[connection signal="timeout"  from="Enemy2_timer"  to="." method="_on_Enemy2_timer_timeout" binds=[  ]]

[connection signal="pressed"  from="Pause/Button"  to="Pause/Button" method="_on_Button_pressed" binds=[  ]]
